# FashionTrendPrediction

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
config/: clip_refine.yaml  color.yaml  detection.yaml  join.yaml  pattern.yaml  pipeline1_viz.yaml  popularity.yaml  validate.yaml
src/: clip_refine.py  color.py  crop_utils.py  data.py  detect.py  join.py  pattern.py  pipeline1_viz.py  popularity.py  train.py  utils.py  validate.py
tests/: test_clip_refine.py  test_color.py  test_crop_utils.py  test_detect.py  test_join.py  test_pattern.py  test_pipeline1_viz.py  test_popularity.py  test_validate.py
